--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:        "The Plain is a minimalist Jekyll theme, that's it. Can't sa
 
 # Google APIs
 google_verify:      false# Your Google Verification - set to 'false' to disable
-google_analytics:   false # Your Google Analytics code - set to 'false' to disable
+google_analytics:   UA-120512630-1 # Your Google Analytics code - set to 'false' to disable
 
 # Author Info
 author_name:        "Heiswayi Nrird"
