--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@ google_verify:      false# Your Google Verification - set to 'false' to disable
 google_analytics:   UA-120512630-1 # Your Google Analytics code - set to 'false' to disable
 
 # Author Info
-author_name:        "Heiswayi Nrird"
-author_email:       hnrird@gmail.com
+author_name:        "AnayAlvis"
+author_email:       anu25270@gmail.com
 author_gravatar:    false # Gravatar md5 hash (of email) here for logo - set to 'false' to disable
-twitter_username:   HeiswayiNrird # set to 'false' to disable
-github_username:    heiswayi # set to 'false' to disable
+twitter_username:   false # set to 'false' to disable
+github_username:    false # set to 'false' to disable
 
 # Site Settings
-url:                https://heiswayi.nrird.com # main url
+url:                https://anayalvis.github.io # main url
 baseurl:            /the-plain # for gh-pages
 permalink:          /notes/:title # Post permalink
 timezone:           Asia/Kuala_Lumpur # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
