--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ github_username:    false # set to 'false' to disable
 
 # Site Settings
 url:                https://anayalvis.github.io # main url
-baseurl:            /anayalvis.github.io # for gh-pages
+baseurl:            /home # for gh-pages
 permalink:          /notes/:title # Post permalink
 timezone:           Asia/Kuala_Lumpur # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 mathjax:            true  # enables support for mathjax - set to 'false' to disable
