--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Info
-title:              "The Plain"
-description:        "The Plain is a minimalist Jekyll theme, that's it. Can't say anymore..."
+title:              "AnayAlvis"
+description:        "AnayAlvis on Science, maths and tech."
 
 # Google APIs
 google_verify:      false# Your Google Verification - set to 'false' to disable
@@ -15,7 +15,7 @@ github_username:    false # set to 'false' to disable
 
 # Site Settings
 url:                https://anayalvis.github.io # main url
-baseurl:            /home # for gh-pages
+baseurl:            / # for gh-pages
 permalink:          /notes/:title # Post permalink
 timezone:           Asia/Kuala_Lumpur # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 mathjax:            true  # enables support for mathjax - set to 'false' to disable
